--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,9 @@
   arxiv={2508.02912},
   html={https://arxiv.org/html/2508.02912},
   pdf={https://arxiv.org/pdf/2508.02912.pdf},
-  also_in={NeurIPS 2025 Workshop on Embodied World Models for Decision Making; NeurIPS 2025 Workshop on Optimization for Machine Learning}
+  also_in={NeurIPS 2025 Workshop on Embodied World Models for Decision Making; NeurIPS 2025 Workshop on Optimization for Machine Learning},
+  video= {https://www.youtube.com/embed/VuvB9-P1xT0},
+  poster= {Communicating-Plans-Not-Percepts.png},
 }
 
 @article{vcnet2025,
@@ -25,7 +27,25 @@
   arxiv={2508.02995},
   html={https://arxiv.org/html/2508.02995},
   pdf={https://arxiv.org/pdf/2508.02995.pdf},
-  also_in={NeurIPS 2025 Workshop on Interpreting Cognition in Deep Learning Models}
+  also_in={NeurIPS 2025 Workshop on Interpreting Cognition in Deep Learning Models},
+  video= {https://www.youtube.com/embed/m2T9krMrUNw},
+  poster= {Geometry-of-Cortical-Computation.png},
+}
+
+@article{sapin2025,
+  selected={true},
+  abbr={BRAID},
+  bibtex_show={true},
+  title={Structural Plasticity as Active Inference: A Biologically-Inspired Architecture for Homeostatic Control.},
+  author={Brennen A. Hill},
+  journal={In Brain-Inspired Dynamics for Engineering Energy-Efficient Circuits and Artificial Intelligence},
+  year={2025},
+  abstract={Traditional neural networks, while powerful, rely on biologically implausible learning mechanisms such as global backpropagation. This paper introduces the Structurally Adaptive Predictive Inference Network (SAPIN), a novel computational model inspired by the principles of active inference and the morphological plasticity observed in biological neural cultures. SAPIN operates on a 2D grid where processing units, or cells, learn by minimizing local prediction errors. The model features two primary, concurrent learning mechanisms: a local, Hebbian-like synaptic plasticity rule based on the temporal difference between a cell's actual activation and its learned expectation, and a structural plasticity mechanism where cells physically migrate across the grid to optimize their information-receptive fields. This dual approach allows the network to learn both how to process information (synaptic weights) and also where to position its computational resources (network topology). We validated the SAPIN model on the classic Cart Pole reinforcement learning benchmark. Our results demonstrate that the architecture can successfully solve the CartPole task, achieving robust performance. The network's intrinsic drive to minimize prediction error and maintain homeostasis was sufficient to discover a stable balancing policy. We also found that while continual learning led to instability, locking the network's parameters after achieving success resulted in a stable policy. When evaluated for 100 episodes post-locking (repeated over 100 successful agents), the locked networks maintained an average 82% success rate.},
+  arxiv={2511.02241},
+  html={https://arxiv.org/html/2511.02241},
+  pdf={https://arxiv.org/pdf/2511.02241.pdf},
+  video= {https://www.youtube.com/embed/7v8OkhD6aXc},
+  poster= {Structural-Plasticity-as-Active-Inference.png},
 }
 
 @article{adversarialwm2025,
@@ -39,7 +59,9 @@
   abstract={The advancement of general-purpose intelligent agents is intrinsically linked to the environments in which they are trained. While scaling models and datasets has yielded remarkable capabilities, scaling the complexity, diversity, and interactivity of environments remains a crucial bottleneck. Hand-crafted environments are finite and often contain implicit biases, limiting the potential for agents to develop truly generalizable and robust skills. In this work, we propose a paradigm for generating a boundless and adaptive curriculum of challenges by framing the environment generation process as an adversarial game. We introduce a system where a team of cooperative multi-agent defenders learns to survive against a procedurally generative attacker. The attacker agent learns to produce increasingly challenging configurations of enemy units, dynamically creating novel worlds tailored to exploit the defenders' current weaknesses. Concurrently, the defender team learns cooperative strategies to overcome these generated threats. This co-evolutionary dynamic creates a self-scaling environment where complexity arises organically from the adversarial interaction, providing an effectively infinite stream of novel and relevant training data. We demonstrate that with minimal training, this approach leads to the emergence of complex, intelligent behaviors, such as flanking and shielding by the attacker, and focus-fire and spreading by the defenders. Our findings suggest that adversarial co-evolution is a powerful mechanism for automatically scaling environmental complexity, driving agents towards greater robustness and strategic depth.},
   arxiv={2509.03771},
   html={https://arxiv.org/html/2509.03771},
-  pdf={https://arxiv.org/pdf/2509.03771.pdf}
+  pdf={https://arxiv.org/pdf/2509.03771.pdf},
+  video= {https://www.youtube.com/embed/8CxBSrvbr4I},
+  poster= {Co-Evolving-Complexity.png},
 }
 
 @article{organoid2025,
@@ -53,7 +75,9 @@
   arxiv={2509.04633},
   html={https://arxiv.org/html/2509.04633},
   pdf={https://arxiv.org/pdf/2509.04633.pdf},
-  also_in={NeurIPS 2025 Workshop on Embodied World Models for Decision Making}
+  also_in={NeurIPS 2025 Workshop on Embodied World Models for Decision Making},
+  video= {https://www.youtube.com/embed/NEvkGQXttog},
+  poster= {Physical-Basis-of-Prediction.png},
 }
 
 @article{languagedriven2025,
@@ -66,22 +90,9 @@
   abstract={Recent advances in agent development have focused on scaling model size and raw interaction data, mirroring the successes seen in large language models. However, for complex, long-horizon multi-agent tasks such as robotic soccer, this end-to-end approach often fails due to intractable exploration spaces and sparse rewards. This position paper argues that the next frontier in developing embodied world models is not merely increasing the fidelity or size of environments, but scaling their structural complexity through explicit hierarchical scaffolding. We posit that an effective world model for decision-making must model not only the world's physics but also its task semantics. Drawing from a systematic review of 2024 research in low-resource multi-agent soccer, we identify a clear trend towards integrating symbolic and hierarchical methods, such as Hierarchical Task Networks (HTNs) and Bayesian Strategy Networks (BSNs), with multi-agent reinforcement learning (MARL). These methods decompose complex goals into manageable subgoals, creating an intrinsic curriculum that shapes agent learning. We propose that such structured environments are essential for bridging the gap between simple, reactive behaviors and sophisticated, strategic team play. We further extend this principle, proposing that this scaffolding can be generalized to other complex domains and dynamically generated by Large Language Models (LLMs), which act as generative world models of tasks. By building environments with explicit, composable task layers, we can guide agent exploration more efficiently, generate meaningful learning signals, and ultimately train more capable and general-purpose agents with fewer resources than purely end-to-end approaches.},
   arxiv={2509.04731},
   html={https://arxiv.org/html/2509.04731},
-  pdf={https://arxiv.org/pdf/2509.04731.pdf}
-}
-
-
-@article{sapin2025,
-  selected={true},
-  abbr={BRAID},
-  bibtex_show={true},
-  title={Structural Plasticity as Active Inference: A Biologically-Inspired Architecture for Homeostatic Control.},
-  author={Brennen A. Hill},
-  journal={In Brain-Inspired Dynamics for Engineering Energy-Efficient Circuits and Artificial Intelligence},
-  year={2025},
-  abstract={Traditional neural networks, while powerful, rely on biologically implausible learning mechanisms such as global backpropagation. This paper introduces the Structurally Adaptive Predictive Inference Network (SAPIN), a novel computational model inspired by the principles of active inference and the morphological plasticity observed in biological neural cultures. SAPIN operates on a 2D grid where processing units, or cells, learn by minimizing local prediction errors. The model features two primary, concurrent learning mechanisms: a local, Hebbian-like synaptic plasticity rule based on the temporal difference between a cell's actual activation and its learned expectation, and a structural plasticity mechanism where cells physically migrate across the grid to optimize their information-receptive fields. This dual approach allows the network to learn both how to process information (synaptic weights) and also where to position its computational resources (network topology). We validated the SAPIN model on the classic Cart Pole reinforcement learning benchmark. Our results demonstrate that the architecture can successfully solve the CartPole task, achieving robust performance. The network's intrinsic drive to minimize prediction error and maintain homeostasis was sufficient to discover a stable balancing policy. We also found that while continual learning led to instability, locking the network's parameters after achieving success resulted in a stable policy. When evaluated for 100 episodes post-locking (repeated over 100 successful agents), the locked networks maintained an average 82% success rate.},
-  arxiv={2511.02241},
-  html={https://arxiv.org/html/2511.02241},
-  pdf={https://arxiv.org/pdf/2511.02241.pdf}
+  pdf={https://arxiv.org/pdf/2509.04731.pdf},
+  video= {https://www.youtube.com/embed/N6lrBR8u-1A},
+  poster= {World-Models-of-Tasks.png},
 }
 
 
